--- a/client/src/App.css
+++ b/client/src/App.css
@@ -12,8 +12,6 @@ a {
 #div_header{
   width: 100%;
   min-height: 75px;
-
-  color: blue;
   display: flex;
   justify-content: flex-end;
   align-items: center;
@@ -41,6 +39,16 @@ a {
   height: 55px;
   width: 55px;
   margin-right: 22.5px;
+}
+#div_header_img{
+width: 100%;
+height: 65px;
+display: flex;
+justify-content: center;
+}
+#div_header_img > a > img{
+  height: 100%;
+  margin-left: 75px;
 }
 
 /*
@@ -311,3 +319,77 @@ a {
   margin: 0;
 }
 
+/*
+//////////////////////////////////////////////////////////////////////
+//                                                                  //
+//                            EMERGÊNCIA                            //
+//                                                                  // 
+//////////////////////////////////////////////////////////////////////
+*/
+.div_container_cards_emergencia{
+  width: 90%;
+  height: fit-content;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 15px;
+  margin-left: 5%;
+}
+.card_emergencia{
+  height: 325px;
+  width: 275px;
+  background-image: linear-gradient(45deg, #2663E5 50%, #2B26C1 50%);
+  border-radius: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.card_emergencia_img{
+  width: 90%;
+  height: 60%;
+  margin-bottom: 15px;
+  display: flex;
+  justify-content: center;
+}
+.card_emergencia_img > img{
+  height: 100%;
+}
+
+/*
+//////////////////////////////////////////////////////////////////////
+//                                                                  //
+//                          REGISTER LOCAL                          //
+//                                                                  // 
+//////////////////////////////////////////////////////////////////////
+*/
+.div_register_local{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#login > p > label{
+  font-size: 15px;
+  color: white;
+  margin-top: 10px;
+}
+#login > p > input{
+  width: 100%;
+  height: 25px;
+  border: 1px solid #313131;
+  background-color: transparent;
+  padding: 5px;
+  color: white;
+}
+input[type='submit' i]{
+  background-image: linear-gradient(45deg, #2663E5 50%, #2B26C1 50%);
+  margin-left: 6px;
+  border-radius: 10px;
+  height: 45px !important;
+  font-size: 25px;
+  cursor: pointer;
+  font-weight: 600;
+}
