--- a/client/src/App.css
+++ b/client/src/App.css
@@ -307,7 +307,7 @@ justify-content: center;
   object-fit: cover;
   border-radius: 10px;
 }
-.card_text{
+.card_text, .ponto_name, .ponto_infos_text{
   font-size: 35px;
   line-height: 50px;
   font-weight: 600;
@@ -392,4 +392,93 @@ input[type='submit' i]{
   font-size: 25px;
   cursor: pointer;
   font-weight: 600;
+}
+
+/*
+//////////////////////////////////////////////////////////////////////
+//                                                                  //
+//                               FAQ                                //
+//                                                                  // 
+//////////////////////////////////////////////////////////////////////
+*/
+
+.card_faq, .contato_faq, .card_ponto{
+  width: 70%;
+  height: fit-content;
+  padding: 10px;
+  padding-bottom: 15px;
+  background-color:#1f1f1f;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.199);
+  border-radius: 12px;
+}
+.contato_faq{
+  background-image: linear-gradient(45deg, #2663E5 50%, #2B26C1 50%);
+}
+
+/*
+//////////////////////////////////////////////////////////////////////
+//                                                                  //
+//                              LOCAL                               //
+//                                                                  // 
+//////////////////////////////////////////////////////////////////////
+*/
+
+.local_img{
+  width: 100%;
+  height: 450px;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  border-top: 5px solid #2B26C1;
+}
+.local_img > img{
+  width: 100%;
+}
+.div_name_container{
+  width: 100%;
+  border: none;
+  border-bottom: 5px solid #2B26C1;
+  margin-top: -65px;
+}
+.div_name_local{
+  height: 65px;
+  width: fit-content;
+  background-image: linear-gradient(45deg, #2663E5 50%, #2B26C1 50%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 10px 10px 0 0;
+  position: relative;
+}
+.ponto_name, .ponto_infos_text{
+  font-size: 45px;
+  margin: 0px 25px;
+  line-height: 45px;
+  text-align: left !important;
+}
+.infos_pontos_container{
+  width: 100%;
+  height: fit-content;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.card_ponto{
+  margin-top: 15px;
+}
+.icons_infos{
+  width: 30px;
+  margin-right: 10px;
+  filter:invert(100%);
+}
+.ponto_infos_text{
+  text-transform: none;
+  font-size: 25px;
+}
+.ponto_infos_text > iframe{
+  width: 100%;
+  height: 300px;
 }
