--- a/client/src/App.css
+++ b/client/src/App.css
@@ -21,7 +21,7 @@ a {
   width: 100%;
   filter:invert(100%);
 }
-#button_login{
+#button_login, #button_logout{
   height: 50px;
   width: 50px;
   display: flex;
@@ -35,7 +35,7 @@ a {
   transition-duration: 0.1s;
   transition-timing-function: ease-in-out;
 }
-#button_login:hover{
+#button_login:hover, #button_logout:hover{
   height: 55px;
   width: 55px;
   margin-right: 22.5px;
@@ -384,7 +384,7 @@ justify-content: center;
   padding: 5px;
   color: white;
 }
-input[type='submit' i]{
+input[type='submit' i], .buttons_admin{
   background-image: linear-gradient(45deg, #2663E5 50%, #2B26C1 50%);
   margin-left: 6px;
   border-radius: 10px;
@@ -402,7 +402,7 @@ input[type='submit' i]{
 //////////////////////////////////////////////////////////////////////
 */
 
-.card_faq, .contato_faq, .card_ponto{
+.card_faq, .contato_faq, .card_ponto, .card_comment{
   width: 70%;
   height: fit-content;
   padding: 10px;
@@ -465,13 +465,17 @@ input[type='submit' i]{
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  padding-bottom: 15px;
+  border-bottom: #2663E5 solid 5px;
 }
 .card_ponto{
   margin-top: 15px;
 }
-.icons_infos{
+.icons_infos, .icons_avaliacao{
   width: 30px;
+  margin-top: -5px;
   margin-right: 10px;
+  margin-left: 10px;
   filter:invert(100%);
 }
 .ponto_infos_text{
@@ -481,4 +485,137 @@ input[type='submit' i]{
 .ponto_infos_text > iframe{
   width: 100%;
   height: 300px;
+}
+.container_comments{
+  width: 100%;
+  height: fit-content;
+  border-top: #2B26C1 solid 5px;
+}
+.card_comment > .card_text{
+  text-align: left;
+}
+.icons_avaliacao{
+  width: 20px;
+  margin: 0;
+}
+.container_card_comment{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 15px;
+}
+textarea {
+  width: 99% !important;
+  height: 50px;
+  border-radius: 5px;
+  resize: none;
+  padding: 5px;
+  border: none;
+  outline: none;
+  font-size: 20px;
+}
+#input_nota{
+  border-radius: 5px;
+  padding: 5px;
+  border: none;
+  outline: none;
+  text-align: center;
+  font-size: 20px;
+  width: 30px;
+  margin-left: 15px;
+}
+.enviar_avaliacao, .att_local{
+  margin-top: 15px;
+  float: right;
+  background-color: #2662e5;
+  background-image: none;
+}
+.colored_background_opacity{
+  background-image: linear-gradient(45deg, #2662e588 50%, #2B26C188 50%) !important;
+}
+
+/*
+//////////////////////////////////////////////////////////////////////
+//                                                                  //
+//                              ADMIN                               //
+//                                                                  // 
+//////////////////////////////////////////////////////////////////////
+*/
+.admin_container{
+  width: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 15px;
+}
+.buttons_admin{
+  width: 300px;
+  height: 25px;
+  border: none;
+  color: white;
+  background-image: linear-gradient(45deg, #2663E5 50%, #2B26C1 50%);
+  border-radius: 10px;
+  font-size: 25px;
+  cursor: pointer;
+  font-weight: 600;
+}
+.container_selector_admin{
+  padding: 10px;
+  width: 90%;
+  margin-left: 5%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-bottom: 10px;
+  border-radius: 15px;
+}
+.container_selector_admin > label {
+  padding: 5px;
+}
+.container_selector_admin > label > span{
+  font-size: 20px;
+  text-transform: uppercase;
+  margin-right: 5px;
+  color: white;
+  font-weight: 600;
+  text-shadow: 1px 1px 2px black, 0 0 1em black, 0 0 0.2em black;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  text-align: center;
+}
+.container_selector_admin > label > input{
+  font-size: 20px;
+  margin-right: 5px;
+  height: 30px;
+  border-radius: 5px;
+  padding: 5px;
+  border: none
+}
+.input_bigger{
+  width: 45%;
+  height: 150px;
+}
+.input_bigger > textarea{
+  width: 90%;
+  height: 100px !important; 
+}
+.att_local{
+  background-color: #2662e5;
+  float: none;
+}
+.table_admin{
+  width: 90%;
+  height: fit-content;
+  background-color:#1f1f1f;
+  border: 1px solid #fff;
+  border-collapse: collapse;
+  margin: 0;
+  text-align: center;
+  color: white;
+  padding: 10px
+}
+.td_button{
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
