--- a/client/src/App.css
+++ b/client/src/App.css
@@ -27,7 +27,7 @@ a {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-right: 25px;
+  margin-right: 1em;
   background-color: transparent;
   border: none;
   cursor: pointer;
@@ -38,7 +38,7 @@ a {
 #button_login:hover, #button_logout:hover{
   height: 55px;
   width: 55px;
-  margin-right: 22.5px;
+  margin-right: 0.6em;
 }
 #div_header_img{
 width: 100%;
@@ -63,11 +63,16 @@ justify-content: center;
   width: 100%;
   text-align: center;
 }
+#img_logo > a {
+  display: block;
+  box-sizing: border-box;
+}
 #img_logo > a > img{
-  width: auto;
-  height: auto;
+  width: 95vw;
+  height: 100%;
   max-width: 572px;
   max-height: 162px;
+  object-fit: cover;
 }
 
 /*
@@ -88,9 +93,13 @@ justify-content: center;
   gap: 25px;
   flex-wrap: wrap;
 }
+.div_container_card_menu > a{
+  display: block;
+  box-sizing: border-box;
+}
 .div_child_card_menu{
-  min-width: 580px;
-  width: 40%;
+  max-width: 580px;
+  width: 90vw;
   height: 250px;
   border-radius: 15px;
   background-image: linear-gradient(45deg, #2663E5 50%, #2B26C1 50%);
@@ -114,7 +123,7 @@ justify-content: center;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  font-size: 4em;
+  font-size: 50px;
   height: fit-content;
   overflow-wrap: normal;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -146,7 +155,8 @@ justify-content: center;
   flex-direction: column;
 }
 .div_container_login_info{
-  width: 500px;
+  width: 96%;
+  max-width: 500px;
   height: 350px;
   margin-top: 75px;
   height: fit-content;
@@ -157,7 +167,7 @@ justify-content: center;
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  width: 500px;
+  width: 100%;
   height: fit-content;
   margin-top: 5px;
   padding-bottom: 20px;
@@ -224,6 +234,8 @@ justify-content: center;
 }
 .btn_select_page{
   height: 35px;
+  min-width: fit-content;
+  padding: 0 5px;
   width: 20%;
   border: #2663E5 solid 5px;
   border-bottom: none;
@@ -264,7 +276,8 @@ justify-content: center;
   margin: 10px 0 10px 0;
   width: 100%;
   height: fit-content;
-  font-size: 70px;
+  /* font-size: 16px; */
+  font-size: calc(5vw);
   font-weight: 600;
   line-height: 70px;
   text-shadow: 1px 1px 2px black, 0 0 1em black, 0 0 0.2em black;
@@ -293,8 +306,8 @@ justify-content: center;
 }
 
 .card{
-  width: 25%;
-  min-width: 450px;
+  width: 95%;
+  max-width: 450px;
   height: fit-content;
   min-height: 225px;
   background-image: linear-gradient(45deg, #2663E5 50%, #2B26C1 50%);
@@ -403,7 +416,7 @@ input[type='submit' i], .buttons_admin{
 */
 
 .card_faq, .contato_faq, .card_ponto, .card_comment{
-  width: 70%;
+  width: 80%;
   height: fit-content;
   padding: 10px;
   padding-bottom: 15px;
@@ -425,7 +438,7 @@ input[type='submit' i], .buttons_admin{
 
 .local_img{
   width: 100%;
-  height: 450px;
+  max-height: 450px;
   overflow: hidden;
   display: flex;
   align-items: center;
@@ -443,7 +456,9 @@ input[type='submit' i], .buttons_admin{
   margin-top: -65px;
 }
 .div_name_local{
-  height: 65px;
+  margin-top: 20px;
+  padding-top: 5px;
+  height: fit-content;
   width: fit-content;
   background-image: linear-gradient(45deg, #2663E5 50%, #2B26C1 50%);
   display: flex;
@@ -480,7 +495,8 @@ input[type='submit' i], .buttons_admin{
 }
 .ponto_infos_text{
   text-transform: none;
-  font-size: 25px;
+  font-size: 18px;
+  line-height: 25px;
 }
 .ponto_infos_text > iframe{
   width: 100%;
