--- a/client/src/App.css
+++ b/client/src/App.css
@@ -16,12 +16,30 @@ a {
   justify-content: flex-end;
   align-items: center;
 }
+.container_button_logout, .container_button_logout_mini{
+  display: flex;
+  align-items: center;
+  gap: 15px;
+}
+.container_button_logout_mini{
+  flex-direction: column;
+  font-size: 10px;
+  gap: 0;
+  text-align: center;
+}
+.header_username, .header_username_mini{
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  color: white;
+}
+.header_username_mini{
+  margin-left: -3em;
+}
 .icon_buttons {
   height: 100%;
   width: 100%;
   filter:invert(100%);
 }
-#button_login, #button_logout{
+#button_login, #button_logout, #button_voltar{
   height: 50px;
   width: 50px;
   display: flex;
@@ -40,6 +58,15 @@ a {
   width: 55px;
   margin-right: 0.6em;
 }
+#button_voltar{
+  margin-right: 0 !important;
+  margin-left: 1em;
+}
+#button_voltar:hover{
+  height: 55px;
+  width: 55px;
+  margin-right: -0.4em !important;
+}
 #div_header_img{
 width: 100%;
 height: 65px;
@@ -48,7 +75,21 @@ justify-content: center;
 }
 #div_header_img > a > img{
   height: 100%;
-  margin-left: 75px;
+  /* margin-left: 75px; */
+}
+.div_alert_error{
+  width: 100%;
+  text-align: center;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  color: white;
+  display: none;
+  justify-content: center;
+}
+.icons_alert{
+  height: 20px;
+  margin-right: 5px;
+  margin-left: 5px;
+  filter: invert(29%) sepia(85%) saturate(4729%) hue-rotate(347deg) brightness(98%) contrast(104%);
 }
 
 /*
@@ -331,6 +372,33 @@ justify-content: center;
   text-transform: uppercase;
   margin: 0;
 }
+#card_text_av{
+  display: flex;
+  justify-content: space-between;
+}
+.delete_icon{
+  filter: invert(100%);
+}
+#button_delete_av{
+  width: 25px;
+  height: 25px;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+.button_responder_av{
+  height: 25px;
+  width: 50%;
+  max-width: 160px;
+  border: none;
+  background-color: transparent;
+  font-size: 16px;
+  text-shadow: 0.5px 0.5px 1px black, 0 0 0.5em black, 0 0 0.2em black;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  color: white;
+  cursor: pointer;
+  margin-top: 5px;
+}
 
 /*
 //////////////////////////////////////////////////////////////////////
@@ -389,13 +457,26 @@ justify-content: center;
   color: white;
   margin-top: 10px;
 }
-#login > p > input{
+#login > p > input, select, option, #login > p > textarea{
   width: 100%;
   height: 25px;
   border: 1px solid #313131;
   background-color: transparent;
   padding: 5px;
   color: white;
+}
+select{
+  height: 37px;
+  width: calc(100% + 12px);
+}
+option{
+  background-color: #313131;
+}
+#login > p > textarea{
+  font-size: 14px !important;
+  width: 100% !important;
+  height: 100px;
+  border-radius: 0px;
 }
 input[type='submit' i], .buttons_admin{
   background-image: linear-gradient(45deg, #2663E5 50%, #2B26C1 50%);
@@ -527,6 +608,7 @@ textarea {
   border-radius: 5px;
   resize: none;
   padding: 5px;
+  padding-right: 0;
   border: none;
   outline: none;
   font-size: 20px;
