commit sync com os dados do documento

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -448,6 +448,12 @@ justify-content: center;
   height: 100%;
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
 /*
 //////////////////////////////////////////////////////////////////////
 //                                                                  //
