--- a/client/src/App.css
+++ b/client/src/App.css
@@ -707,23 +707,31 @@ textarea {
   cursor: pointer;
   font-weight: 600;
 }
+.container_update_table{
+  display: flex;
+  flex-wrap: wrap;
+}
 .container_selector_admin{
   padding: 10px;
   width: 90%;
-  margin-left: 5%;
+  max-width: 360px;
+  margin-left: 2.5%;  
+  margin-right: 2.5%;  
   display: flex;
-  flex-wrap: wrap;
   justify-content: center;
+  flex-direction: column;
   margin-bottom: 10px;
   border-radius: 15px;
 }
 .container_selector_admin > label {
-  padding: 5px;
+  width: 100%;
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
 .container_selector_admin > label > span{
   font-size: 20px;
   text-transform: uppercase;
-  margin-right: 5px;
+  margin-left: 5px;
   color: white;
   font-weight: 600;
   text-shadow: 1px 1px 2px black, 0 0 1em black, 0 0 0.2em black;
@@ -736,33 +744,69 @@ textarea {
   height: 30px;
   border-radius: 5px;
   padding: 5px;
-  border: none
+  border: none;
+  width: 100%;
+  box-sizing: border-box;
 }
-.input_bigger{
-  width: 45%;
-  height: 150px;
+.container_selector_admin > label > select{
+  font-size: 20px;
+  margin-right: 5px;
+  height: 35px;
+  border-radius: 5px;
+  padding: 5px;
+  border: none;
+  background-color: white;
+  color: black;
+  width: 100%;
+  box-sizing: border-box;
 }
-.input_bigger > textarea{
-  width: 90%;
-  height: 100px !important; 
+.container_selector_admin > label > textarea{
+  height: 100px;
+  font-size: 16px;
 }
 .att_local{
   background-color: #2662e5;
   float: none;
 }
+.table_container{
+  max-width: 1360px;
+  max-height: 979px;
+  width: 100%;
+  box-sizing: border-box;
+  overflow-x: scroll;
+  overflow-y: scroll;
+}
 .table_admin{
-  width: 90%;
-  height: fit-content;
   background-color:#1f1f1f;
-  border: 1px solid #fff;
+  border: 1px solid #313131;
   border-collapse: collapse;
-  margin: 0;
   text-align: center;
   color: white;
   padding: 10px
 }
+thead{
+  border: 1px solid #313131;
+}
+.td_head_buttons{
+  max-width: 185px !important;
+}
 .td_button{
-  display: flex;
-  align-items: center;
-  justify-content: center;
+ max-width: 95px !important;
+}
+.td_name{
+  max-width: 95px;
+  padding-left: 10px;
+  padding-right: 10px;
+  border: 1px s;
+}
+.td_sobre{
+  width: 200px !important;
+  max-height: 95px;
+  overflow-y: scroll;
+  font-size: 10px;
+  margin-bottom: 5px;
+}
+.td_break {
+  line-break: anywhere;
+  width: 100px;
 }
