Feature Cofirmacao email 2

--- a/server/src/services/templates/confirmarEmail.html
+++ b/server/src/services/templates/confirmarEmail.html
@@ -4,9 +4,9 @@
   </head>
   <body>
     <div>
-      <h2>Olá {{User.name}}</h2><br>
+      <h2>Olá {{username}}</h2><br>
       Para confirmar seu email clique no link abaixo.<br>
-      <a href="{{url}}/verificar-email?token={{VerifyToken}}">Página de verificação</a>
+      <a href="{{url}}/verificar-email?token={{verifyTokenEmail}}">Página de verificação</a>
     </div>
   </body>
 </html>
