--- a/client/src/Perfil.css
+++ b/client/src/Perfil.css
@@ -3,11 +3,19 @@
     flex-direction: column;
     align-items: center;
     padding: 20px;
+    background-color: #1f1f1f;
+    width: 90%;
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%);
+    border-radius: 10px;
+    color: white;
   }
   
   .profile-header {
     display: flex;
     align-items: center;
+    gap: 20px;
   }
   
   .avatar-image {
@@ -15,11 +23,15 @@
     height: 100px;
     border-radius: 50%;
     margin-right: 20px;
+    filter: invert(100%);
   }
   
   .profile-info {
     display: flex;
     flex-direction: column;
+  }
+  .profile-info p{ 
+    margin: 5px;
   }
   
   .profile-sections {
