git commit -m 'fix css'

--- a/client/src/components/menuHeader.css
+++ b/client/src/components/menuHeader.css
@@ -82,6 +82,8 @@
   background-color: #fff;
   padding: 5px;
   gap: 10px;
+  border: none;
+  border-radius: 5px;
 }
 .container_button_profile:hover{
   background-color: #f2f2f2;
