--- a/client/src/App.css
+++ b/client/src/App.css
@@ -89,9 +89,16 @@ a {
   border-radius: 10px;
 }
 .sidebar-filters-search input{
-  width: calc(190px - 22px) !important;
+  width: calc(190px - 10px) !important;
   margin-top: 18px;
   margin-bottom: 5px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  height: 29px;
+  padding: 5px;
+  border-radius: 5px;
+  border: none;
+  background-color: #fff;
+  color: #000;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 .sidebar-filters-search select{
@@ -118,6 +125,9 @@ a {
   float: right;
   opacity: 100% !important;
   color: white;
+  border: none;
+  border-radius: 5px;
+  height: 30px;
 }
 
 /*
