--- a/client/src/Perfil.css
+++ b/client/src/Perfil.css
@@ -23,7 +23,7 @@
     height: 100px;
     border-radius: 50%;
     margin-right: 20px;
-    filter: invert(100%);
+    /* filter: invert(100%); */
   }
   
   .profile-info {
