--- a/client/src/components/carrosselIndex.css
+++ b/client/src/components/carrosselIndex.css
@@ -1,9 +1,9 @@
-#carrossel{
+#carrosselIndex{
     background-color: transparent;
 }
 
-#carrossel img{
-    max-height: 500px;
+#carrosselIndex img{
+    /* max-height: 500px; */
     object-fit: cover;
     height: 100vh;
 }
