--- a/client/src/App.css
+++ b/client/src/App.css
@@ -488,30 +488,11 @@ justify-content: center;
 .icon_right{
   transform: rotate(90deg);
 }
-.div_container_card{
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 25px;
-}
 
-.card{
-  width: 95%;
-  max-width: 450px;
-  height: fit-content;
-  min-height: 225px;
-  background-image: linear-gradient(45deg, #2663E5 50%, #2B26C1 50%);
-  border-radius: 15px;
-  padding: 0.3%
-}
-.card_content > img{
-  width: 100%;
-  max-height: 175px;
-  object-fit: cover;
-  border-radius: 10px;
-}
-.card_text, .ponto_name, .ponto_infos_text{
+
+
+
+.ponto_name, .ponto_infos_text{
   font-size: 35px;
   line-height: 50px;
   font-weight: 600;
