--- a/client/src/App.css
+++ b/client/src/App.css
@@ -654,11 +654,53 @@ input[type='submit' i], .buttons_admin{
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  border-top: 5px solid #2B26C1;
+  position: relative;
 }
 .local_img > img{
   width: 100%;
+  object-fit: cover;
 }
+.local_name{
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: #fff;
+  padding: 5px;
+  border-radius: 0 10px 0 0;
+  font-size: 3vh;
+  font-weight: bold;
+  display: flex;
+}
+.favoritar_button{
+  border: none;
+  padding: 0;
+  width: 28px;
+  height: 28px;
+  margin-left: 15px;
+  background-color: transparent;
+}
+.favoritar_button img {
+  width: 28px;
+  height: 28px;
+}
+.favoritar_button_off{
+  filter: invert(100%);
+  transition: transform 0.2s ease;
+  cursor: pointer;
+}
+.favoritar_button_off:hover{
+  transform: scale(1.3);
+}
+.favoritar_button_on{
+  filter: brightness(0) saturate(100%) invert(87%) sepia(24%) saturate(5259%) hue-rotate(0deg) brightness(104%) contrast(103%);
+  transition: transform 0.2s ease;
+  cursor: pointer;
+}
+.favoritar_button_on:hover{
+  transform: scale(1.3);
+}
+
 .div_name_container{
   width: 100%;
   border: none;
