--- a/client/src/App.css
+++ b/client/src/App.css
@@ -492,7 +492,7 @@ justify-content: center;
 
 
 
-.ponto_name, .ponto_infos_text{
+.ponto_name{
   font-size: 35px;
   line-height: 50px;
   font-weight: 600;
@@ -625,7 +625,7 @@ input[type='submit' i], .buttons_admin{
 //////////////////////////////////////////////////////////////////////
 */
 
-.card_faq, .contato_faq, .card_ponto, .card_comment{
+.card_faq, .contato_faq, .card_ponto{
   width: 80%;
   height: fit-content;
   padding: 10px;
@@ -719,7 +719,7 @@ input[type='submit' i], .buttons_admin{
   border-radius: 10px 10px 0 0;
   position: relative;
 }
-.ponto_name, .ponto_infos_text{
+.ponto_name{
   font-size: 45px;
   margin: 0px 25px;
   line-height: 45px;
@@ -754,14 +754,8 @@ input[type='submit' i], .buttons_admin{
   width: 100%;
   height: 300px;
 }
-.container_comments{
-  width: 100%;
-  height: fit-content;
-  border-top: #2B26C1 solid 5px;
-}
-.card_comment > .card_text{
-  text-align: left;
-}
+
+
 .card_resposta{
     width: 80%;
     height: fit-content;
@@ -794,13 +788,7 @@ input[type='submit' i], .buttons_admin{
   width: 20px;
   margin: 0;
 }
-.container_card_comment{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  gap: 15px;
-}
+
 textarea {
   width: 99% !important;
   height: 50px;
