--- a/client/src/Local.css
+++ b/client/src/Local.css
@@ -76,16 +76,156 @@
     display: flex;
     gap: 15px;
 }
-.card_comment_text{
+.card_comment_text, .text_resposta{
     margin-top: 15px;
     margin-bottom: 0;
     font-size: 2vh;
     text-shadow: 1px 1px 2px black, 0 0 1em black, 0 0 0.2em black;
     font-family: "Poppins", sans-serif;
     color: #eee;
+    margin-left: 10px;
+}
+.card_text_av, .card_text_res{
+    display: flex;
+    justify-content: space-between;
 }
 
 
-/* .card_comment > .card_text{
-    text-align: left;
-  } */
+.button_responder_av{
+    height: 25px;
+    width: fit-content;
+    margin-left: 10px;
+    font-weight: 600;
+    border: none;
+    background-color: transparent;
+    font-size: 16px;
+    text-shadow: 0 0 5px black, 0 0 5px black, 0 0 0.5px black;
+    color: white;
+    cursor: pointer;
+    margin-top: 5px;
+  }
+
+.card_resposta{
+    /* height: fit-content; */
+    padding: 10px;
+    padding-bottom: 15px;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.199);
+    border-radius: 12px;
+    width: calc(100% - 20px);
+    background-color:#313131;
+    margin-top: 15px;
+}
+.icons_resposta{
+    filter: invert(100%);
+    height: 20px;
+    margin: 0;
+    width: 20px;
+    height: 20px;
+    border-radius: 100%;
+}
+.text_resposta_nome{
+    color: white;
+    text-transform: uppercase;
+    text-shadow: 0 0 5px black, 0 0 5px black, 0 0 0.5px black;
+    line-height: 20px;
+    font-size: 1.5vh;
+}
+.text_resposta{
+    font-size: 1.7vh;
+    text-shadow: 0 0 5px black, 0 0 5px black, 0 0 0.5px black;
+}
+.button_avaliacao{
+    width: 273px;
+    height: 50px;
+    background-color: white;
+    font-size: 20px;
+    border: none;
+    border-radius: 25px;
+    color: #111;
+    font-weight: bold;
+    text-transform: uppercase;
+    border: solid 2px #fff;
+    transition: background-color 0.3s, color 0.3s;
+    margin-bottom: 10px;
+}
+.button_avaliacao:hover{
+    cursor: pointer;
+    color: white;
+    background-color: transparent;
+}
+.modal {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 1;
+}
+.modal_content {
+    width: 80vw;
+    max-width: 500px;
+    background-color: #1f1f1f;
+    padding: 20px;
+    border-radius: 5px;
+    position: relative;
+    z-index: 2;
+}
+.close {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
+    color: white;
+    text-shadow: 0 0 5px black, 0 0 5px black, 0 0 0.5px black;
+    z-index: 3;
+}
+.avaliacao_name{
+    font-size: 2vh;
+    line-height: 45px;
+    font-weight: bold;
+    text-shadow: 0 0 5px black, 0 0 5px black, 0 0 0.5px black;
+    font-family: "Poppins", sans-serif;
+    color: #eee;
+    text-transform: uppercase;
+    margin: 0;
+    text-align: center;
+}
+.textbox_avaliacao{
+    width: 100%;
+    box-sizing: border-box;
+    margin-top: 10px;
+}
+.image_avaliacao{
+    width: 90%;
+    background-color: white;
+    font-size: 2vh;
+    border: none;
+    border-radius: 25px;
+    color: #111;
+    font-weight: bold;
+    border: solid 2px #fff;
+    transition: background-color 0.3s, color 0.3s;
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
+.enviar_avaliacao{
+    margin-top: 15px;
+    float: right;
+    background-color: #2662e5;
+    cursor: pointer;
+    border: none;
+    border-radius: 8px;
+    color: white;
+    height: 45px;
+    min-width: 90px;
+    width: fit-content;
+    padding-left: 10px;
+    padding-right: 10px;
+    font-size: 16px;
+    font-weight: 600;
+    text-shadow: 0 0 5px black, 0 0 5px black, 0 0 0.5px black;
+}
