--- a/client/src/App.css
+++ b/client/src/App.css
@@ -610,7 +610,7 @@ input[type='submit' i], .buttons_admin{
 //////////////////////////////////////////////////////////////////////
 */
 
-.card_faq, .contato_faq, .card_ponto{
+.card_ponto{
   width: 80%;
   height: fit-content;
   padding: 10px;
@@ -618,9 +618,6 @@ input[type='submit' i], .buttons_admin{
   background-color:#1f1f1f;
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.199);
   border-radius: 12px;
-}
-.contato_faq{
-  background-image: linear-gradient(45deg, #2663E5 50%, #2B26C1 50%);
 }
 
 /*
