--- a/client/src/App.css
+++ b/client/src/App.css
@@ -339,6 +339,9 @@ justify-content: center;
 //                                                                  // 
 //////////////////////////////////////////////////////////////////////
 */
+.outer_container {
+  position: relative;
+}
 #page_login, #page_register{
   padding-top: 75px;
   display: flex;
@@ -348,11 +351,23 @@ justify-content: center;
 .div_container_login_info{
   width: 96%;
   max-width: 500px;
-  height: 350px;
-  margin-top: 75px;
   height: fit-content;
-
+  position: absolute;
+  z-index: 99;
+  top: 25%;
+  left: 50%;
+  transform: translate(-50%);
 }
+.dark_overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 98;
+}
+
 .form_container{
   display: flex;
   align-items: center;
@@ -367,12 +382,12 @@ justify-content: center;
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.199);
   font-family: -apple-system, BlinkMacSystemFont, sans-serif;
 }
-.form_container > form > h1{
+/* .form_container > form > h1{
   color: white;
   font-size: 35px;
   font-weight: 800;
   text-align: center;
-}
+} */
 .legenda{
   font-size: 11px;
   color: rgba(177, 177, 177, 0.3);
@@ -386,7 +401,7 @@ justify-content: center;
   height: 35px;
   width: 300px;
 }
-.btn_submit{
+/* .btn_submit{
   cursor: pointer;
   border: none;
   border-radius: 8px;
@@ -400,7 +415,7 @@ justify-content: center;
   font-size: 16px;
   font-weight: 600;
   text-shadow: 1px 1px 2px black, 0 0 1em black, 0 0 0.2em black;
-}
+} */
 
 .to_register{
   font-size: 13px;
@@ -587,7 +602,7 @@ option{
   height: 100px;
   border-radius: 0px;
 }
-input[type='submit' i], .buttons_admin{
+.buttons_admin{
   background-image: linear-gradient(45deg, #2663E5 50%, #2B26C1 50%);
   margin-left: 6px;
   border-radius: 10px;
