--- a/client/src/Local.css
+++ b/client/src/Local.css
@@ -229,3 +229,30 @@
     font-weight: 600;
     text-shadow: 0 0 5px black, 0 0 5px black, 0 0 0.5px black;
 }
+.selected_image img{
+    width: 75px;
+}
+.avaliacao_imagem{
+    width: 75px;
+    margin-top: 15px;
+    margin-left: 10px;
+    cursor: pointer;
+}
+.avaliacao_imagem_aberta_fundo{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 999;
+    cursor: pointer;
+}
+.avaliacao_imagem_aberta{
+    max-width: 80%;
+    max-height: 80%; 
+    border-radius: 5px;
+}
