--- a/client/src/components/header.css
+++ b/client/src/components/header.css
@@ -6,18 +6,21 @@
     position: fixed;
     top: 0;
     z-index: 100;
+    width: 100%;
+    min-height: 75px;
 }
 
 
 
 #div_header_img{
     width: auto !important;
-    height: 35px;
+    /* height: 35px; */
     display: flex;
     justify-content: center;
+    flex-direction: column;
 }
 #div_header_img > a > img{
-    height: 100%;
+    height: 35px;
     /* margin-left: 75px; */
 }
 
