Form analytics (front) + design fixes

--- a/client/src/components/menuHeader.css
+++ b/client/src/components/menuHeader.css
@@ -84,6 +84,7 @@
   gap: 10px;
   border: none;
   border-radius: 5px;
+  cursor: pointer;
 }
 .container_button_profile:hover{
   background-color: #f2f2f2;
