--- a/client/src/RegisterLocal.css
+++ b/client/src/RegisterLocal.css
@@ -9,6 +9,7 @@
     color: white;
     width: 100%;
     text-align: center;
+    cursor: pointer;
 }
 .form_container_reg_local{
     display: flex;
@@ -19,7 +20,6 @@
     height: fit-content;
     margin-top: 5px;
     padding: 0 20px;
-    padding-bottom: 20px;
     border-radius: 12px;
     background: #1f1f1f;
     /* box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.199); */
@@ -30,6 +30,7 @@
     justify-content: center;
     flex-wrap: wrap;
     gap: 10px;
+    padding-bottom: 20px;
 }
 .form_p_local{
     color: white;
@@ -87,6 +88,7 @@
     height: 0;
     opacity: 0;
     overflow: hidden;
+    padding-bottom: 0px;
   }
   .form-visible {
     height: auto;
