--- a/client/src/RegisterLocal.css
+++ b/client/src/RegisterLocal.css
@@ -78,6 +78,7 @@
     font-size: 16px;
     font-weight: bold;
     text-transform: uppercase;
+    cursor: pointer;
 }
 
 .form-reg-local {
@@ -102,4 +103,168 @@
     transform: rotate(0deg);
     transition: transform 0.3s ease;
   }
+
+  .table_outer_container {
+    width: 100%;
+    overflow-x: auto;
+    color: white;
+  }
   
+  .table_container {
+    width: 100%; /* Defina a largura máxima para ocupar o contêiner */
+    overflow-x: auto; /* Adiciona a rolagem horizontal quando o conteúdo ultrapassa a largura */
+    margin: 0 auto;
+    white-space: nowrap; /* Evita quebrar linhas */
+  }
+  
+  
+
+  .table_admin{
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 10px;
+    table-layout: fixed;
+  }
+
+  .table_admin th, .table_admin td {
+    border: 1px solid #313131;
+    padding: 8px;
+    text-align: left;
+    height: 50px; /* Defina a altura desejada para as linhas */
+    max-width: 200px;
+    width: 200px;
+    white-space: nowrap; /* Para garantir que o texto não quebre */
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+  .table_admin th {
+    background-color: #f2f2f2;
+  }
+  .td_head_buttons {
+    width: 140px !important; /* Ajuste conforme necessário */
+  }
+  .td_name {
+    font-weight: bold;
+  }
+  .td_button{
+    /* display: flex; */
+    width: 140px !important;
+  }
+  .td_button button, .td_iframe button {
+    padding: 5px 10px;
+    background-color: transparent;
+    /* border: 2px solid #ffffff; */
+    color: white;
+    cursor: pointer;
+    border-radius: 100%;
+    height: 50px;
+    width: 50px;
+    margin-right: 5px;
+    margin-left: 5px;
+  }
+  .td_button button:hover , .td_iframe button:hover{
+    background-color: #1c1c1c;
+  }
+  .td_button button img{
+    height: 100%;
+    width: 100%;
+  }
+  .edit_button_table, .td_iframe button{
+    border: 2px solid #2464E4;
+  }
+  .delete_button_table{
+    border: 2px solid #fc4444;
+  }
+  .edit_button_table img, .td_iframe button img{
+    filter: brightness(0) saturate(100%) invert(29%) sepia(64%) saturate(3064%) hue-rotate(213deg) brightness(93%) contrast(91%);
+  }
+  .delete_button_table img{
+    filter: brightness(0) saturate(100%) invert(50%) sepia(78%) saturate(4416%) hue-rotate(335deg) brightness(101%) contrast(97%);
+  }
+  .td_sobre {
+    max-width: 200px; /* Ajuste conforme necessário */
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
+  .td_sobre.td_break {
+    white-space: normal;
+    word-wrap: break-word;
+  }
+  .td_iframe{
+    width: 60px !important;
+  }
+
+  .table-visible {
+    display: block;
+  }
+  
+  .table-hidden {
+    display: none;
+  }
+
+  /* Estilos para o modal de imagem */
+.image-modal {
+  display: none;
+   position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7); /* Fundo escurecido */
+  z-index: 999; /* Garante que o modal esteja na parte superior */
+  overflow: auto;
+}
+
+.image-modal-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
+.image-modal img {
+  max-width: 80%; /* Define o tamanho máximo da imagem ampliada */
+  max-height: 80%;
+  border: 4px solid #fff; /* Adiciona uma borda branca */
+  border-radius: 8px; /* Borda arredondada */
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.5); /* Adiciona uma sombra */
+}
+
+.modal-open {
+  display: block; /* Mostra o modal se estiver aberto */
+}
+
+.modal-closed {
+  display: none; /* Esconde o modal se estiver fechado */
+}
+
+.image-close {
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  font-size: 24px;
+  color: #fff;
+  cursor: pointer;
+  z-index: 1000; /* Garante que o botão de fechar esteja na parte superior */
+}
+
+  
+
+
+/* 
+  thead{
+    border: 1px solid #313131;
+  }
+  .td_sobre{
+    width: 200px !important;
+    max-height: 95px;
+    overflow-y: scroll;
+    font-size: 10px;
+    margin-bottom: 5px;
+  }
+  .td_break {
+    line-break: anywhere;
+    width: 100px;
+  }
+   */
