--- a/client/src/RegisterLocal.css
+++ b/client/src/RegisterLocal.css
@@ -251,6 +251,10 @@
   z-index: 1000; /* Garante que o botão de fechar esteja na parte superior */
 }
 
+#vizContainer{
+  width: 100%;
+  height: 100%;
+}
   
 
 
