--- a/client/src/Perfil.css
+++ b/client/src/Perfil.css
@@ -238,3 +238,45 @@
   margin: 0;
   margin-left: 15px;
 }
+.conquista_card{
+  background-color: #302f2f;
+  padding: 10px;
+  border-radius: 10px;
+}
+.conquista_icon{
+  width: 50px;
+  height: 50px;
+}
+.conquista_icon img {
+  width: 100%;
+  height: 100%;
+}
+.conquista_container_text{
+  margin-left: 5px;
+}
+.conquista_container_text p{
+  margin: 5px;
+}
+.conquista_desc{
+  font-size: 13px;
+  color: #ccc;
+}
+.progress_text{
+  margin-bottom: 5px;
+  margin-top: 10px;
+  font-size: 14px;
+  color: #ccc;
+  font-weight: bold;
+}
+.progress_bar{
+  border-radius: 5px;
+  background-color: #636363;
+  width: 100%;
+  height: 5px;
+}
+.progress{
+  border-radius: 5px;
+  height: 5px;
+  background-image: linear-gradient(-90deg,#2C24C4,#2464E4);
+
+}
