--- a/client/src/components/langSelector.css
+++ b/client/src/components/langSelector.css
@@ -3,6 +3,7 @@
   display: flex;
   align-items: center;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  margin-right: 10px;
 }
 
 .dropdown {
