--- a/client/src/RegisterLocal.css
+++ b/client/src/RegisterLocal.css
@@ -251,11 +251,18 @@
   z-index: 1000; /* Garante que o botão de fechar esteja na parte superior */
 }
 
-#vizContainer{
-  width: 100%;
-  height: 100%;
+.button_collab{
+  width: 70vw;
+  height: 50px;
+  background-color: #313131;
+  color: white;
+  font-size: 16px;
+  font-weight: bold;
+  border: none;
+  border-radius: 15px;
+  margin-top: 10px;
+  cursor: pointer;
 }
-  
 
 
 /* 
